Fixing mapbuttons and layout issues (#3)
Mapbuttons need to be absolute to fix the scroll issue

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,8 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, black 0px 0px 0px 3px;
   border-bottom: thick #6d597a;
   border-bottom-style: ridge;
+  position: relative;
+  z-index: 1;
 }
 
 .header-position {
