--- a/src/components/Map/Map.module.scss
+++ b/src/components/Map/Map.module.scss
@@ -1,9 +1,6 @@
 .mapContainer {
   height: 100vh;
-}
-
-.mapControlButtons {
-
+  position: inherit !important;
 }
 
 .spinner {
